# cpp_3d_eindopdracht

./: CMakeLists.txt  README.md  build_run.bat
header/: camera.h  component.h  follow_component.h  game.h  game_object.h  model.h  model_component.h  particle_component.h  planet_component.h  render_object.h  shader.h  spaceship_component.h  terrain.h  texture.h  unshaded_model_component.h  window.h  world.h
resources/models/gasgiant/: gas_giant.gltf
resources/models/map/: map.gltf
resources/models/moon/: moon.gltf
resources/models/ringplanet/: ring_planet.gltf
resources/models/skybox/: skybox.gltf
resources/models/spaceship/: spaceship.gltf
resources/shaders/: basic_fragment.glsl  basic_vertex.glsl  billboard_fragment.glsl  billboard_vertex.glsl  model_fragment.glsl  model_vertex.glsl  unshaded_fragment.glsl  unshaded_vertex.glsl
src/: Camera.cpp  FollowComponent.cpp  Game.cpp  Main.cpp  Model.cpp  ModelComponent.cpp  ParticleComponent.cpp  PlanetComponent.cpp  RenderObject.cpp  Shader.cpp  SpaceshipComponent.cpp  Texture.cpp  UnshadedModelComponent.cpp  Window.cpp
